static/styles/main.less
/* ... */
.nav-pills li {
  overflow: hidden;
  user-select: none;
  width: 100%;
  .break-word;
  &:not(.active) {
    cursor: pointer;
  }
  &.active {
    & > a {
      background-color: @navbar-color-active;
      color: @white;
      font-weight: 600;
      &:hover {
        background-color: @navbar-color-active;
      }
      &:focus {
        background-color: @navbar-color-active;
    }
    }
  }
  & > a {
    padding-left: 25px;
    line-height: 1.2;
    color: @navbar-color-active;
    font-weight: 600;
    hyphens: none;

    &:hover {
      color: @white;
      background-color: @navbar-color-hover;
    }
  }
  &.group-title {
    font-weight: 600;
    margin: 20px 0 10px 0px;
    cursor: default;
    text-transform: capitalize;
  }
}

// FORMS

.forms-box {
  @base-indent: 20px;

  margin-bottom: @base-indent * 1.5;
  h3 {
    padding-bottom: 6px;
    margin: 0 0 @base-indent * 1.5;
    border-bottom: 1px solid @gray + 50%;
    color: @base-text-color + 10%;
    box-sizing: border-box;
    font-size: @base-font-size + 7px;
    .font-normal;
    .checkbox-group {
      padding: 0;
      label {
        margin-bottom: -3px;
        .custom-tumbler {
          margin-right: 8px;
        }
      }
    }
  }
  h4 {
    margin: @base-indent * 1.5 0 @base-indent;
    font-size: @base-font-size + 5px;
    .font-normal;
  }
  label {
    color: @base-text-color;
    cursor: pointer;
    box-sizing: border-box;
    line-height: 1.5;
    .font-normal;
  }
  .help-block {
    font-size: @base-font-size - 2px;
    color: @gray + 25%;
    padding: 0;
    margin: 0;
  }
  .radio-group + .form-group, .radio-group + .checkbox-group {
    margin-top: @base-indent * 2;
  }
  .form-group {
    padding: 0 @base-indent / 2;
    margin-bottom: @base-indent;
    box-sizing: border-box;
    label {
      width: @default-label-width;
      float: left;
      padding: 6px 8px 0 0;
    }
    input, textarea, select {
      float: left;
    }
    input[type=file] {
      opacity: 0;
      position: absolute;
    }
    &:not(.disabled) input.file-name[readonly] {
      background-color: white;
      cursor: pointer;
    }
    input, textarea, select {
      max-width: @default-input-width;
      width: @default-input-width;
    }
    textarea {
      max-width: @default-input-width * 2;
    }
    .input-group {
      float: left;
      max-width: @default-input-width;
      @input-addon-width: 40px;
      input {
        width: @default-input-width - @input-addon-width;
      }
      .input-group-addon {
        width: @input-addon-width;
        height: 34px;
        cursor: pointer;
        float: left;
        padding: 8px;
      }
    }
    .help-block {
      max-width: @page-width - @default-input-width - @default-label-width - 280px;
      float: left;
      margin-left: 20px;
      padding-top: 9px;
      box-sizing: border-box;
    }
    .hidden + .help-block {
      margin-left: 0;
    }
    &.has-error .help-block {
      .text-danger;
    }
    &:after {
      .clearfix;
    }
  }
  .checkbox-group {
    padding-left: @base-indent / 2;
    margin-bottom: @base-indent;
    .custom-tumbler {
      margin-top: -1px;
    }
    .help-block {
      display: block;
      max-width: auto;
      margin-top: -4px;
      margin-left: 28px;
    }
  }
  .tooltip-icon {
    .text-warning;
    margin-left: 5px;
    font-size: @base-font-size + 2px;
  }

  // custom control styles
  .repos {
    margin-bottom: @base-indent;
    > .help-block {
      margin: 0 0 @base-indent @base-indent * 0.5;
    }
    .form-inline {
      margin-bottom: 15px;
      position: relative;
      .form-group {
        label {float:none;}
      }
    }
    .form-group {
      margin: 0;
      .help-block {
        position: absolute;
        bottom: 4px;
        left: @default-input-width * 2.5 + @base-indent * 4 + 20px;
      }
      &.repo-uri .form-control {
        @repo-uri-width: @default-input-width * 1.1;
        width: @repo-uri-width;
        max-width: @repo-uri-width;
      }
      &.repo-priority {
        .form-control {
          width: @default-input-width * 0.5;
        }
        .btn-link {
          .base-btn-link-colors;
        }
      }
      .form-control-static {
        display: inline;
      }
    }
    .buttons {
      padding: 0 0 0 @base-indent * 0.5;
    }
  }

  .field-list {
    float: left;
    > div {
      float: none;
      input, textarea {
        margin-bottom: @base-indent / 2;
      }
      &:last-child input,  &:last-child textarea {
        margin-bottom: 0;
      }
      .field-controls {
        float: left;
        padding-left: @base-indent;
        .btn {
          padding: 0;
          margin: 7px 0 5px;
          &.btn-add-field + .btn {
            margin-left: @base-indent / 2;
          }

        }
      }
      .field-error {
        .text-danger;
        padding-top: 1px;
      }
    }
    + .help-block {
      max-width: 350px;
    }
  }
}

// PAGES

.welcome-page {
  @vertical-offset: 20px;
  color: @base-text-color;
  padding: 40px;
  > div {
    background-color: @white;
    border-radius: 10px;
    padding: 10px 30px 30px 30px;
    box-sizing: border-box;
    > div {text-align: center;}
    h1 {margin-bottom: @vertical-offset + 10;}
    .welcome-checkbox-box {
      text-align: center;
      padding-top: @vertical-offset;
    }
    .welcome-button-box {
      margin: @vertical-offset 0;
      .btn-lg {
        font-size: @base-font-size;
        margin: 2px 0;
      }
    }
  }
}
/* ... */

